global.css
*,
*::before,
*::after {
  box-sizing: border-box;
}

body {
  margin: 0;
}

#app {
  max-width: 40em;
}

.canvas-container {
  position: relative;
}

.canvas-container .overlay {
  position: absolute;
  top: 0;
  left: 0;
}

.selected {
  background-color: #ddd;
}

